@@ -1,3 +1,10 @@
+2016-07-03  Titus Brown  <titus@idyll.org>
+
+   * lib{hashtable.cc, hashtable.hh}: added get_kmer_hashes_as_hashset to
+   graphs.
+   * khmer/_khmer.cc: updated CPython API to add get_kmer_hashes_as_hashset.
+   * tests/test_countgraph.py: added test for get_kmer_hashes_as_hashset.
+
 2015-10-19  Michael R. Crusoe  <crusoe@ucdavis.edu>
 
    * versioneer.py,khmer/_version.py,setup.py,setup.cfg: upgrade Versioneer to
